# ezmanpages

./: .gitignore  README.md  meson.build
include/: errors.h  ezmanpages.h  parser.h  utils.h
src/: errors.c  main.c  parser.c  utils.c
